[gd_scene load_steps=2 format=3 uid="uid://3aprw0b6r0fu"]

[ext_resource type="Script" path="res://craftables/craftable_button.gd" id="1_m3a3p"]

[node name="CraftableButton" type="Control"]
custom_minimum_size = Vector2(256, 160)
layout_mode = 3
anchor_right = 0.133333
anchor_bottom = 0.148148
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_m3a3p")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
mouse_default_cursor_shape = 2
flat = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="NameLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
text = "No Data"
autowrap_mode = 2

[node name="DescLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
text = "No Data"
autowrap_mode = 2

[node name="CostLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
text = "No Data"
autowrap_mode = 2

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
